objects/Campaign_Influence__c.object
<CustomObject>
    <description>SFDC R3.0_Julalin_20/09/2012: New Custom is created as per the requirement #
Custom Campaign Influence is created to replace all the functionality of Standard Campaign Influence</description>
    <fields>
        <fullName>CampaignRecordType__c</fullName>
        <formula>Campaign__r.RecordType.Name</formula>
        <label>CampaignRecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC R3.0_Julalin_20/09/2012: New field is created as per the requirement #3217</description>
        <label>Campaign Name</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Influence</relationshipLabel>
        <relationshipName>Campaign_Influence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <description>SFDC R3.0_Julalin_20/09/2012: New field is created as per the requirement #3217</description>
        <label>Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC R3.0_Julalin_20/09/2012: New field is created as per the requirement #3217</description>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Influence</relationshipLabel>
        <relationshipName>Campaign_Influence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC R3.0_Julalin_20/09/2012: New field is created as per the requirement #3217</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Campaign Influence</relationshipLabel>
        <relationshipName>Campaign_Influence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC R3.0_Julalin_20/09/2012: New field is created as per the requirement #3217</description>
        <label>Primary Campaign Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC R3.0_Julalin_20/09/2012: New field is created as per the requirement #3217</description>
        <label>Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_System_Campaign_Id__c</fullName>
        <formula>Campaign__r.Source_System_Campaign_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source System Campaign Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type1__c</fullName>
        <formula>TEXT(Campaign__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Campaign Influence</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Influence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CI_Check_for_parent_marketing_campaign</fullName>
        <active>true</active>
        <description>When adding a Campaign Influence record to an opportunity, the user should not add a parent campaign for Marketing campaigns.</description>
        <errorConditionFormula>IF( 
($Setup.Global_Config__c.Mute_Validation_Rule__c==true) ,False, 
Campaign__r.RecordType.Name==&quot;Marketing Campaign&quot; &amp;&amp; ( ISNULL(Campaign__r.ParentId) || ISBLANK(Campaign__r.ParentId) ))</errorConditionFormula>
        <errorMessage>Parent Campaign can not be tagged to Opportunity. Only child marketing campaign should be tagged to a Opportunity.</errorMessage>
    </validationRules>
</CustomObject>